roles/database/postgres-cluster/operator-ui/templates/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "postgres-operator-ui"
  namespace: "postgres"
  labels:
    application: "postgres-operator-ui"
spec:
  type: "ClusterIP"
  selector:
    application: "postgres-operator-ui"
  ports:
    - port: 80
      protocol: "TCP"
      targetPort: 8081
